Call logging and more minor views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+<ul>
+  <li><a href="/calls">Calls</a></li>
+  <li><a href="/scripts">Scripts</a></li>
+</ul>
+
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
