--- a/app/views/calls/index.html.erb
+++ b/app/views/calls/index.html.erb
@@ -1,10 +1,14 @@
-<table border=1>
+<h1>Calls</h1>
+
+<table class="table">
   <tr>
     <th>Time</th>
     <th>Caller</th>
     <th>Called</th>
     <th>Duration</th>
+    <th>Recordings</th>
     <th>Status</th>
+    <th></th>
   </tr>
 <% @calls.each do |call| %>
   <tr>
@@ -12,7 +16,9 @@
     <td><%= call.Caller %></td>
     <td><%= call.Called %></td>
     <td><%= call.CallDuration %></td>
-    <td><%= call.CallStatus %></td>
+    <td><%= call.recordings.count %></td>
+    <td><%= render_call_status(call) %></td>
+    <td><%= link_to "", call_path(call), method: :delete, class: "icon-trash" %></td>
   </tr>
 <% end %>
 </table>
