--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -1,14 +1,19 @@
-<%= form_for(@script) do |f| %>
-  <% @script.errors.full_messages.each do |msg| %>
+<%= form_for([@script, @command, @tag]) do |f| %>
+  <% @tag.errors.full_messages.each do |msg| %>
     <div class="alert alert-error">
       <a class="close" data-dismiss="alert">&#215;</a>
       <%= content_tag :div, msg if msg.is_a?(String) %>
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="controls">
     <%= f.label :name %>
     <%= f.text_field :name %>
+  </div>
+
+  <div class="controls">
+    <%= f.label :value %>
+    <%= f.text_field :value %>
   </div>
 
   <%= f.submit %>
