--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TwilioRails</title>
+  <title>Slit</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<ul>
-  <li><a href="/calls">Calls</a></li>
-  <li><a href="/scripts">Scripts</a></li>
-</ul>
-
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-
-<%= yield %>
-
+  <div class="container">
+    <div class="main-content">
+      <div class="container">
+      <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="/">Home</a></li>
+      </ul>
+      </div>
+      <div class="navbar">
+        <div class="navbar-inner">
+          <div class="container">
+            <div class="nav-collapse">
+              <ul class="nav">
+                <li class="<%= 'active' if params[:controller] == 'home' %>">
+                  <%= link_to 'Home', "/" %>
+                </li>
+                <% if user_signed_in? %>
+                  <li class="<%= 'active' if params[:controller] == 'scripts' %>">
+                    <%= link_to 'Scripts', scripts_path %>
+                  </li>
+                  <li class="<%= 'active' if params[:controller] == 'calls' %>">
+                    <%= link_to 'Calls', calls_path %>
+                  </li>
+                  <li class="<%= 'active' if params[:controller] == 'recordings' %>">
+                    <%= link_to 'Recordings', recordings_path %>
+                  </li>
+                <% else %>
+                  <li>
+                    <%= link_to('Login', new_user_session_path) %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+            <% if user_signed_in? %>
+            <div class="btn-group pull-right">
+              <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                <i class="icon-user"></i> <%= current_user.email %>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to('Profile', edit_user_registration_path) %></li>
+                <li class="divider"></li>
+                <li><%= link_to('Sign Out', destroy_user_session_path, :method => :delete) %></li>
+              </ul>
+            </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <% flash.each do |name, msg| %>
+          <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+            <a class="close" data-dismiss="alert">&#215;</a>
+            <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+          </div>
+        <% end %>
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
+
