--- a/app/views/scripts/show.html.erb
+++ b/app/views/scripts/show.html.erb
@@ -8,7 +8,7 @@
 <h2>Commands</h2>
 
 <ul class="render render-main">
-  <li style="font-family: mono"><%= link_to "", new_script_command_path(@script), :class => "hover-show icon-file" %> <i class="icon-blank"></i> <i class="icon-blank"></i> <i class="icon-blank"></i><i class="icon-blank"></i> &lt;Reponse&gt;</li>
+  <li style="font-family: mono"><%= link_to "", new_script_command_path(@script), :class => "hover-show icon-file" %> <i class="icon-blank"></i> <i class="icon-blank"></i> <i class="icon-blank"></i><i class="icon-blank"></i> &lt;Response&gt;</li>
   <li style="font-family: mono"><%= render :partial => "commands", :locals => { :commands => @commands } %></li>
-  <li style="font-family: mono"><%= link_to "", new_script_command_path(@script), :class => "hover-show icon-file" %> <i class="icon-blank"></i> <i class="icon-blank"></i> <i class="icon-blank"></i><i class="icon-blank"></i> &lt;/Reponse&gt;</li>
+  <li style="font-family: mono"><%= link_to "", new_script_command_path(@script), :class => "hover-show icon-file" %> <i class="icon-blank"></i> <i class="icon-blank"></i> <i class="icon-blank"></i><i class="icon-blank"></i> &lt;/Response&gt;</li>
 </ul>
